# slam_demo-1

./: .gitignore  CMakeLists.txt  eval_sim_fig2.py  sim_fixed_eval.py  sim_fixed_run.sh  sim_run.sh  sim_s_win_eval.py  sim_s_win_run.sh  sim_win_eval.py  sim_win_run.sh  test_error.py
apps/: backend_em_app.cc
config/: config_sim.yaml
result/sim/: bla.csv  boem_0.csv  boem_20.csv  boem_20_1.csv  boem_20_2.csv  boem_20_3.csv  boem_40.csv  boem_40_1.csv  boem_40_2.csv  boem_40_3.csv  boem_60.csv  boem_60_1.csv  boem_60_2.csv  boem_60_3.csv  boem_80.csv  boem_80_1.csv  boem_80_2.csv  boem_80_3.csv  boem_s_0.csv  boem_s_1.csv  boem_s_2.csv  boem_s_3.csv  boem_s_4.csv  boem_s_5.csv  boem_s_6.csv  boem_s_7.csv  boem_s_8.csv  boem_s_9.csv  dr.csv  dr_0.csv  dr_error.csv  em.csv  em_0.csv  em_20.csv  em_20_1.csv  em_20_2.csv  em_20_3.csv  em_40.csv  em_40_1.csv  em_40_2.csv  (+54 more)
sim/: CMakeLists.txt
sim/fixed/: sim.h
sim_fixed/: CMakeLists.txt  sim.h  sim_boem_fixed.cc  sim_em_fixed.cc  sim_opt_fixed.cc
sim_s_win/: CMakeLists.txt  sim.h  sim_boem_app_s_win.cc  sim_em_app_s_win.cc  sim_opt_app_s_win.cc
sim_vis_fixed/: CMakeLists.txt  sim_boem_fixed.cc  sim_em_fixed.cc
sim_vis_win/: CMakeLists.txt  sim.h  sim_boem_win.cc  sim_em_win.cc  sim_opt_win.cc
sim_win/: CMakeLists.txt  sim.h  sim_app_win.cc  sim_boem_win.cc  sim_em_win.cc  sim_opt_win.cc
